# open-robot-battery

./: .gitignore  CHARGING.md  LICENSE.md  MANUAL.md  README.md
hardware/: README.md
hardware/bom/: LANDER-BOM.xlsx  LANDER_BOM.csv  LANDER_BOM_Standardized.csv  README.md  lander_pick_and_place.csv
hardware/cad/: README.md
hardware/cad/LANDER_project_311025/: Amperry_robot.kicad_pcb  Amperry_robot.kicad_prl  Amperry_robot.kicad_pro  Amperry_robot.kicad_sch  inputs_sheet.kicad_sch  mech_conn_sheet.kicad_sch  ~_autosave-Amperry_robot.kicad_pcb.lck
hardware/cad/LANDER_project_311025/gerbers/: Amperry_robot-B_Cu.gbr  Amperry_robot-B_Mask.gbr  Amperry_robot-B_Paste.gbr  Amperry_robot-B_Silkscreen.gbr  Amperry_robot-Edge_Cuts.gbr  Amperry_robot-F_Cu.gbr  Amperry_robot-F_Mask.gbr  Amperry_robot-F_Paste.gbr  Amperry_robot-F_Silkscreen.gbr  Amperry_robot-NPTH.drl  Amperry_robot-PTH.drl  Amperry_robot-bottom.pos  Amperry_robot-job.gbrjob  Amperry_robot-top.pos  Amperry_robot.cmp  Amperry_robot.step
hardware/gerber/: README.md
hardware/gerber/Project Outputs for Amperry_2_module_powerbank/: Status Report.Txt
hardware/gerber/Project Outputs for Amperry_2_module_powerbank/Gerber/: Pick Place for amperryPOC_panel.txt  amperryPOC_panel-RectHoles.TXT  amperryPOC_panel-macro.APR_LIB  amperryPOC_panel.DRR  amperryPOC_panel.EXTREP  amperryPOC_panel.GBL  amperryPOC_panel.GBO  amperryPOC_panel.GBP  amperryPOC_panel.GBS  amperryPOC_panel.GD1  amperryPOC_panel.GG1  amperryPOC_panel.GM  amperryPOC_panel.GM1  amperryPOC_panel.GM2  amperryPOC_panel.GTL  amperryPOC_panel.GTO  amperryPOC_panel.GTP  amperryPOC_panel.GTS  amperryPOC_panel.LDP  amperryPOC_panel.REP  amperryPOC_panel.TXT  amperryPOC_panel.apr  amperry_pick_and_place_metric.csv
hardware/schematics/: README.md
orb_controller/: CMakeLists.txt  README.md  package.xml
orb_controller/config/: default.yaml  orb_controller_params.yaml
orb_controller/docs/: REGISTER_MAP.md
orb_controller/include/orb_controller/: ezpd_bcr_i2c.h
orb_controller/launch/: orb_controller.launch
orb_controller/msg/: PDStatus.msg  PowerStatus.msg
orb_controller/scripts/: test_i2c_direct.py  test_orb_controller.py
orb_controller/src/: ezpd_bcr_i2c.cpp  orb_controller_node.cpp
orb_controller/srv/: GetStatus.srv  RequestPDRole.srv  SetVoltageCurrent.srv
ros2/: README.md
ros2/src/orb_i2c_interfaces/: CMakeLists.txt
ros2/src/orb_i2c_interfaces/srv/: I2CTransaction.srv
ros2/src/orb_i2c_support/: package.xml  setup.py
ros2/src/orb_i2c_support/launch/: i2c_manager.launch.py
ros2/src/orb_i2c_support/orb_i2c_support/: __init__.py  ez_pd_bcr_backend.py  i2c_node.py
ros2/src/orb_i2c_support/test/: test_simulated_backend.py
software/raspberry-pi/: README.md  raspi_ez_pd_demo.py
software/ros2/: README.md
software/ros2/src/orb_i2c_interfaces/: package.xml
software/ros2/src/orb_i2c_support/: setup.cfg
software/ros2/src/orb_i2c_support/orb_i2c_support/: backend_factory.py  i2c_backend.py
software/ros2/src/orb_i2c_support/resource/: orb_i2c_support
