<?xml version="1.0"?>
<package format="3">
  <name>orb_i2c_support</name>
  <version>0.1.0</version>
  <description>ROS 2 support package for the Open Robot Battery I2C interface.</description>
  <maintainer email="sviluppo@tomorrowtech.it">TomorrowTech</maintainer>
  <license>CC-BY-NC-4.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>orb_i2c_interfaces</depend>

  <test_depend>ament_pytest</test_depend>
</package>
