<?xml version="1.0"?>
<package format="3">
  <name>orb_i2c_interfaces</name>
  <version>0.1.0</version>
  <description>Interface definitions for the Open Robot Battery I2C stack.</description>
  <maintainer email="sviluppo@tomorrowtech.it">TomorrowTech</maintainer>
  <license>CC-BY-NC-4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
